fixed footer color contrast accessibility issue
thanks to aXe

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,9 @@
 
   text-align: center;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
+
+  /* changed due to contrast accessibility issue */
+  color: #747474;
 }
 
 .made-with {
